# DevEnv

./: .gitignore  Cargo.toml  README.ko.md  README.md  README.md.ko
.github/workflows/: release.yml
crates/devenv-adapters/: Cargo.toml
crates/devenv-adapters/src/: archive.rs  catalog.rs  checksum.rs  download.rs  fs.rs  install.rs  lib.rs  metadata_cache.rs  metadata_http.rs  process.rs  shell.rs  shim.rs  store.rs
crates/devenv-adapters/tests/: catalog.rs  config_discovery.rs  download.rs  install_pipeline_adapters.rs  metadata_cache.rs  metadata_http.rs  shell_renderer.rs  shim_writer.rs  store.rs
crates/devenv-catalog/: Cargo.toml
crates/devenv-catalog/src/: lib.rs  main.rs
crates/devenv-catalog/tests/: catalog_generator.rs
crates/devenv-cli/: Cargo.toml  build.rs
crates/devenv-cli/src/: lib.rs  main.rs
crates/devenv-cli/tests/: cli.rs
crates/devenv-core/: Cargo.toml
crates/devenv-core/src/: config.rs  domain.rs  error.rs  fakes.rs  lib.rs  ports.rs  usecases.rs
crates/devenv-core/tests/: activation.rs  catalog.rs  config.rs  domain.rs  install_pipeline.rs  metadata_http.rs  ports.rs  runtime_usecases.rs  shims.rs
crates/devenv-tools/: Cargo.toml
crates/devenv-tools/src/: go.rs  (+10 more)
docs/: distribution.md  user-guide.md
docs/adr/: 0001-cli-name.md  0002-workspace-boundaries.md  0003-rust-toolchain.md  0004-shim-strategy.md  0005-rustup-interop.md  0006-ruby-php-install-strategy.md  0007-plugin-strategy.md  0008-python-install-strategy.md  0009-metadata-provider-cache.md  0010-provider-capability-registry.md  0011-github-metadata-catalog.md  0012-catalog-trust-policy.md
docs/catalog/: bootstrap.md  generator.md  repository-workflow.md  schema-v1.md
fixtures/catalog-generator/: overrides.toml
metadata/providers/: README.md
packaging/homebrew/: devenv.rb.template
scripts/: catalog-generate  catalog-smoke.sh  catalog-verify  network-smoke.sh  npm-smoke.sh  package-npm.sh  package-release.sh  release-smoke.sh  release-version.sh
(+40 files in other folders)
