[package]
name = "devenv-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "devenv-catalog"
path = "src/main.rs"

[dependencies]
devenv-adapters = { path = "../devenv-adapters" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
